# sandhole

./: .dockerignore  .gitignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci  LICENSE  README.md  SECURITY.md  default.nix  flake.nix  justfile  lib.nix  module.nix  shell.nix  udp_over_tcp.py
.cargo/: config.toml
.config/: nextest.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: ws9afjhghi9vb62p7vxrd3n8d6n8g2q7-source  ys550vagwhfa89d3yxqsji4r0ypmc60x-source
.github/: FUNDING.yml
.github/workflows/: build.yml  cachix.yml  docker.yml  mdbook.yml  nix.yml  release.yml  test_macos.yml  validate.yml  zizmor.yml
.tack/: pins.lock.json  pins.toml
benches/: ssh_transfer.rs
blender/: Sandhole.blend
book/: book.toml  compose.yaml  nginx.conf  nginx.vh.default.conf
book/diagrams/: example_flow.excalidraw  how_it_works.excalidraw  sequence_diagram.excalidraw
book/src/: SUMMARY.md  admin_interface.md  administration.md  advanced_options.md  advanced_uses.md  benchmarks.md  cli.md  compiling_from_source.md  configuration.md  custom_domains.md  docker_compose.md  exposing_your_first_service.md  faq.md  features.md  introduction.md  local_forwarding.md  nixos.md  nixos_options.md  quick_start.md  technical_overview.md  tls_support.md  udp_over_tcp.md
docker-compose-example/: .gitignore  README.md  compose.yml  le-config.yml
docker-compose-example/client/: .gitignore  Dockerfile  compose.yml
docker-compose-example/homelab/: compose.yml
docker-compose-example/homelab/ca/: rootCA-key.pem  rootCA.pem
docker-compose-example/homelab/certificates/sandhole.local/: fullchain.pem  privkey.pem
docker-compose-example/localhost-testing/: .gitignore  compose.yml
docker-compose-example/sandhole/: .gitignore  compose.yml  config.toml
docker-compose-example/sandhole-dnsrobocert/: .gitignore  compose.yml  le-config.yml
nix/: checks.nix  default.nix  dummy.nix  lib.nix  packages.nix
nix/modules/: sandhole-websites.nix  sandhole.nix
nix/modules/tests/: blacklist.nix  generate-certs.nix  websites.nix  with-container.nix
nixos/: docs.nix  module.nix
nixos/tests/: basic.nix  with-container.nix
nixos/tests/common/: ssh-keys.nix
nixos/tests/common/ca/: generate-certs.nix
npins/: sources.json
sandhole_socket/: Cargo.toml
sandhole_socket/src/: lib.rs  tcp_listener.rs  udp_listener.rs  udp_over_tcp.rs
src/: acme.rs  addressing.rs  admin.rs  certificates.rs  config.rs  connection_handler.rs  connections.rs  directory.rs  droppable_handle.rs  entrypoint.rs  error.rs  files.rs  fingerprints.rs  handler.rs  http.rs  ip.rs  keepalive.rs  lib.rs  login.rs  main.rs  main.rs.orig  mdns.rs  pool.rs  quota.rs  reactor.rs  sock_addr_alias.rs  ssh.rs  ssh_exec.rs  ssh_forwarding.rs  tcp.rs  tcp_alias.rs  tcp_listener.rs  telemetry.rs  tls.rs  udp.rs  udp_listener.rs
src/admin/: connection_handler.rs  interface.rs  mod.rs
src/http/: http11.rs  http2.rs  mod.rs
src/ssh/: auth.rs  connection_handler.rs  exec.rs  forwarding.rs  mod.rs
test_data/ca/: rootCA.pem
test_data/private_keys/: key2
tests/: admin_interface.rs  admin_missing_pty.rs  admin_no_interface_if_forwarding.rs  admin_no_interface_if_proxying.rs  admin_prometheus.rs  admin_remove_user.rs  admin_restricted_aliases.rs  admin_window_change.rs  alias_aliasing_tunnel.rs  alias_cannot_be_localhost.rs  alias_disable_aliasing.rs  alias_http_aliases.rs  alias_http_finagling.rs  alias_local_forward_existing_http.rs  alias_rate_limit_download.rs  alias_rate_limit_upload.rs  alias_reject_port_0.rs  alias_reject_special_ports.rs  alias_require_allowed_fingerprints.rs  alias_timeout.rs  auth_ignore_user_actions.rs  auth_prevent_unauthorized_actions.rs  auth_self_hosted_login_api.rs  bind_all_hostnames.rs  bind_any_host.rs  config_disable_aliasing.rs  config_disable_http.rs  config_disable_https.rs  config_disable_prometheus.rs  config_disable_tcp.rs  config_invalid_options.rs  config_invalid_secret_key_contents.rs  config_invalid_secret_key_path.rs  config_ip_blocklist.rs  config_no_write_permissions_for_admin_dir.rs  config_no_write_permissions_for_users_dir.rs  connection_deny_load_balancing.rs  connection_load_balancing.rs  force_random_subdomains.rs  http_addressing_profanities.rs  (+56 more)
tests/data/: .gitignore
tests/data/ca/: rootCA-key.pem
tests/data/certificates/foobar.tld/: fullchain.pem  privkey.pem
tests/data/certificates/localhost/: README.txt  fullchain.pem  privkey.pem
tests/data/custom_certificate/: README.txt  fullchain.pem  privkey.pem
tests/data/private_keys/: admin  key1
tests/data/public_keys/: key1.pub
tests/data/server_keys/: ssh  ssh.pub
tests/data/user_keys/: admin.pub  key2.pub  keys_1_2.pub
tests/integration/: admin_interface.rs  admin_missing_pty.rs  admin_no_interface_if_forwarding.rs  admin_no_interface_if_proxying.rs  admin_prometheus.rs  admin_remove_user.rs  admin_restricted_aliases.rs  admin_window_change.rs  alias_aliasing_tunnel.rs  alias_cannot_be_localhost.rs  alias_http2.rs  alias_http_aliases.rs  alias_ip_connections_limit.rs  alias_local_forward_existing_http.rs  alias_pool_limit.rs  alias_pool_timeout.rs  alias_rate_limit_download.rs  alias_rate_limit_upload.rs  alias_reject_special_ports.rs  alias_require_allowed_fingerprints.rs  alias_timeout.rs  auth_ignore_user_actions.rs  auth_prevent_unauthorized_actions.rs  auth_self_hosted_login_api.rs  common.rs  config_authenticate_any_key_as_user.rs  config_disable_aliasing.rs  config_disable_http.rs  config_disable_https.rs  config_disable_prometheus.rs  config_disable_tcp.rs  config_invalid_options.rs  config_invalid_secret_key_contents.rs  config_invalid_secret_key_path.rs  config_invalid_seed_file.rs  config_ip_blocklist.rs  config_ipv6_blocklist.rs  config_missing_seed_file.rs  config_no_write_permissions_for_admin_dir.rs  config_no_write_permissions_for_certificates_dir.rs  (+75 more)
udp_over_tcp/: Cargo.toml
udp_over_tcp/src/: main.rs
