[package]
name = "sandhole"
version = "0.8.6"
edition = "2024"
rust-version = "1.88.0"
description = "Expose HTTP/SSH/TCP services through SSH port forwarding."
repository = "https://github.com/EpicEric/sandhole"
homepage = "https://sandhole.com.br/"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
readme = "README.md"
keywords = ["ssh", "proxy", "reverse-proxy", "tunnel", "hole-punching"]
categories = ["network-programming", "web-programming", "authentication"]
exclude = [".github", "book", "docker-compose-example", "tests/data"]

[features]
default = ["login", "rustrict", "prometheus", "acme"]
login = ["dep:reqwest"]
prometheus = ["dep:metrics-exporter-prometheus"]
acme = ["dep:rustls-acme"]

[dependencies]
ahash = "0.8.12"
async-speed-limit = { version = "0.4.2", features = ["tokio"] }
aws-lc-rs = "1.15.2"
axum = { version = "0.8.8", default-features = false }
block-id = "0.2.1"
bon = "3.8.2"
bytes = "1.11.0"
bytesize = "2.3.1"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive", "string"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", default-features = false }
dashmap = "6.1.0"
enumflags2 = "0.7.12"
hickory-resolver = "0.25.2"
http = "1.4.0"
http-body-util = "0.1.3"
humantime = "2.3.0"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
ipnet = "2.11.0"
ipnet-trie = "0.3.0"
itertools = "0.14.0"
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1", optional = true }
notify = "8.2.0"
owo-colors = "4.2.3"
pretty-duration = "0.1.1"
rand = { version = "0.9.2", default-features = false, features = [
  "std",
  "std_rng",
  "os_rng",
  "thread_rng",
] }
rand_chacha = "0.9.0"
rand_seeder = "0.4.0"
ratatui = { version = "0.30.0", default-features = false, features = [
  "crossterm",
] }
reqwest = { version = "0.13.1", optional = true, default-features = false, features = [
  "charset",
  "http2",
  "hickory-dns",
  "json",
  "rustls",
] }
russh = "0.56.0"
rustls = "0.23.36"
rustls-acme = { version = "0.15.0", optional = true, default-features = false, features = [
  "tokio",
  "aws-lc-rs",
  "tls12",
  "webpki-roots",
] }
rustls-pki-types = "1.13.2"
rustls-webpki = "0.103.8"
rustrict = { version = "0.7.38", optional = true, features = ["customize"] }
serde = { version = "1.0.228", default-features = false, features = [
  "serde_derive",
] }
serde_json = "1.0.149"
sysinfo = "0.37.2"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "=0.3.19", features = [
  "env-filter",
  "fmt",
  "chrono",
] }
trie-rs = "0.4.2"
webpki-roots = "1"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }

[dev-dependencies]
axum = { version = "0.8.8", features = ["macros", "ws"] }
futures-util = { version = "0.3.31", default-features = false, features = [
  "std",
] }
insta = { version = "1.46.0", features = ["yaml"] }
mockall = "0.14.0"
nix = "0.30.1"
regex = "1.12.2"
test-log = { version = "=0.2.18", features = ["trace", "color"] }
test-log-macros = "=0.2.18"
tokio-tungstenite = "0.28.0"
tower = "0.5.2"
vt100-ctt = { version = "0.16.0", default-features = false }

[profile.release]
strip = true
lto = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }

[package.metadata.cargo-udeps.ignore]
normal = ["openssl"]

[package.metadata.binstall]
pkg-url = "https://sandhole.com.br/download/v{ version }/sandhole-{ target-family }-{ target-arch }{ binary-ext }"
pkg-fmt = "bin"
disabled-strategies = ["quick-install"]
