[package]
name = "sandhole"
version = "0.10.1"
edition = "2024"
rust-version = "1.88.0"
description = "Expose HTTP/SSH/TCP services through SSH port forwarding."
repository = "https://github.com/EpicEric/sandhole"
homepage = "https://sandhole.com.br/"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
readme = "README.md"
keywords = ["ssh", "proxy", "reverse-proxy", "tunnel", "hole-punching"]
categories = ["network-programming", "web-programming", "authentication"]
exclude = [".github", "book", "docker-compose-example", "tests/data"]

[workspace]
members = ["sandhole_socket", "udp_over_tcp"]

[workspace.dependencies]
ahash = "0.8.12"
clap = { version = "4.6.1", features = ["derive", "string"] }
color-eyre = "0.6.5"
dashmap = "6.2.1"
sandhole_socket = { version = "0.1.1", path = "sandhole_socket" }
socket2 = "0.6.3"
tokio = { version = "1.52.3", features = ["full"] }

[features]
default = ["acme", "duper", "login", "prometheus", "rustrict"]
acme = ["dep:rustls-acme"]
duper = ["dep:tracing_duper"]
login = ["dep:reqwest"]
prometheus = ["dep:metrics-exporter-prometheus"]

[dependencies]
ahash = { workspace = true }
async-speed-limit = { version = "0.4.2", features = ["tokio"] }
aws-lc-rs = "1.17.0"
axum = { version = "0.8.9", default-features = false }
block-id = "0.2.1"
bon = "3.9.2"
bytes = "1.11.1"
bytesize = "2.4.0"
chrono = "0.4.45"
clap = { workspace = true }
clap_complete = "4.6.5"
color-eyre = { workspace = true }
crossterm = { version = "0.29.0", default-features = false }
dashmap = { workspace = true }
deadpool = { version = "0.13.0", default-features = false, features = ["rt_tokio_1", "unmanaged"] }
enumflags2 = "0.7.12"
futures-util = { version = "0.3.32", default-features = false, features = [
  "std",
] }
hickory-resolver = "0.26.1"
http = "1.4.2"
http-body-util = "0.1.3"
humantime = "2.3.0"
hyper = { version = "1.10.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
ipnet = "2.12.0"
ipnet-trie = "0.3.0"
itertools = "0.14.0"
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", optional = true }
notify = "8.2.0"
owo-colors = { version = "4.3.0", features = [ "supports-colors" ] }
pretty-duration = "0.1.1"
rand = { version = "0.10.1", default-features = false, features = [
  "std",
  "std_rng",
  "sys_rng",
  "thread_rng",
] }
rand_chacha = "0.10.0"
rand_seeder = "0.5.0"
ratatui = { version = "=0.30.0", default-features = false, features = [
  "crossterm",
] }
ratatui-core = "=0.1.0" # CI broken on 0.1.1
reqwest = { version = "0.13.4", optional = true, default-features = false, features = [
  "charset",
  "http2",
  "hickory-dns",
  "json",
  "rustls",
] }
russh = "0.62.1"
rustls = "0.23.40"
rustls-acme = { version = "0.15.3", optional = true, default-features = false, features = [
  "tokio",
  "aws-lc-rs",
  "tls12",
  "webpki-roots",
] }
rustls-pki-types = "1.14.1"
rustls-webpki = "0.103.13"
rustrict = { version = "0.7.38", optional = true, features = ["customize"] }
sandhole_socket = { workspace = true }
serde = { version = "1.0.228", default-features = false, features = [
  "serde_derive",
] }
serde_json = "1.0.150"
socket2 = { workspace = true }
sysinfo = "0.38.4"  # 0.39.x requires MSRV bump to 1.95.0
thiserror = "2.0.18"
tokio = { workspace = true }
tokio-rustls = "0.26.4"
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["net"] }
tracing = "0.1.44"
tracing_duper = { version = "0.1.1", optional = true }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = [
  "chrono",
  "env-filter",
  "fmt",
  "json",
] }
trie-rs = "0.4.2"
webpki-roots = "1"

[dev-dependencies]
axum = { version = "0.8.9", features = ["macros", "ws"] }
insta = { version = "1.48.0", features = ["yaml"] }
mockall = "0.14.0"
nix = "0.31.3"
regex = "1.12.4"
test-log = { version = "0.2.21", features = ["trace", "color"] }
tokio-tungstenite = "0.29.0"
tower = "0.5.3"
vt100-ctt = { version = "0.17.1", default-features = false }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.81", features = ["vendored"] }

[profile.release]
strip = true
lto = true

[profile.bench]
strip = false
lto = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }

[package.metadata.cargo-udeps.ignore]
normal = ["openssl"]

[package.metadata.binstall]
pkg-url = "https://sandhole.com.br/download/v{ version }/sandhole-{ target-family }-{ target-arch }{ binary-ext }"
pkg-fmt = "bin"
disabled-strategies = ["quick-install"]
